# structural_crates

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  MIT_license  readme.md  structural_crates-before removing top_variant_ident.7z
structural/: Cargo.toml  build.rs
structural/src/: chars.rs  const_generic_utils.rs  convert.rs  docs.rs  enum_traits.rs  enums.rs  field.rs  field_cloner.rs  field_path.rs  field_traits.rs  for_examples.rs  from_structural.rs  lib.rs  macros.rs  msg.rs  mut_ref.rs  p.rs  path.rs  structural_aliases.rs  structural_ext.rs  structural_trait.rs  test_utils.rs  tests.rs  type_level.rs  utils.rs  wrapper.rs
structural/src/docs/: enums.rs  optional_accessors.rs  structural_macro.rs
structural/src/docs/structural_macro/: enums.rs  optional_accessors.rs
structural/src/enum_traits/: enum_ext.rs  variant_count.rs  variant_proxy.rs
structural/src/enums/: enum_ext.rs  variant_count.rs  variant_proxy.rs
structural/src/field/: array_impls.rs  enum_impls.rs  errors.rs  for_arrays.rs  for_tuples.rs  get_field_ext.rs  most_impls.rs  multi_fields.rs  ownership.rs  rev_get_field.rs  tuple_impls.rs  variant_field.rs
structural/src/field/for_arrays/: array_traits.rs
structural/src/field/multi_fields/: components.rs  path_set_types.rs  single_field_path.rs
structural/src/field/ownership/: on_drop.rs
structural/src/field/rev_get_field/: components.rs  nested_field_path.rs  path_set_types.rs
structural/src/field_path/: declare_field_path_types.rs  path_components.rs  tests.rs  to_usize.rs
structural/src/field_traits/: enum_impls.rs  errors.rs  for_arrays.rs  for_tuples.rs  get_field_ext.rs  most_impls.rs  multi_fields.rs  normalize_fields.rs  rev_get_field.rs  slice_impls.rs  tuple_impls.rs  variant_field.rs
structural/src/field_traits/for_arrays/: array_traits.rs
structural/src/field_traits/rev_get_field/: components.rs  nested_field_path.rs
structural/src/field_traits/slice_impls/: tests.rs
structural/src/macros/: delegate_structural.rs  drop_fields.rs  enum_derivation.rs  field_paths.rs  field_tuples.rs  from_structural.rs  ident.rs  impl_struct.rs  list.rs  make_struct.rs  struct_derivation.rs  structural_alias.rs  switch.rs  tstr_macros.rs  type_level_internal.rs  variant_proxy.rs
structural/src/path/: array_paths.rs  declare_field_path_types.rs  path_components.rs  tests.rs  to_usize.rs
structural/src/structural_aliases/: array_traits.rs  tuple_traits.rs
structural/src/tests/: delegation.rs  enum_derive.rs  enum_impls.rs  field_paths.rs  impl_struct.rs  into_fields.rs  macro_tests.rs  make_struct.rs  multi_fields.rs  multi_nested_fields.rs  optional_fields.rs  rev_field_traits.rs  structural_alias.rs  structural_derive.rs  switch.rs  utils.rs
structural/src/tests/into_fields/: drop_order.rs
structural/src/type_level/: cmp.rs  collection_traits.rs  field_path.rs  ident.rs  integer.rs  list.rs  to_value_traits.rs
structural/src/type_level/collection_traits/: push_back.rs  tuple_impls.rs
structural/src/type_level/field_path/: tests.rs  to_usize.rs
structural/src/type_level/ident/: tests.rs
structural/src/type_level/integer/: tests.rs
structural/src/type_level/list/: tests.rs
structural/src/utils/: deref_nested.rs
structural/tests/: modules.rs
structural/tests/submodules/: accessing_many_fields.rs  delegation.rs  enum_derive.rs  field_cloner.rs  from_structural.rs  from_structural_derive.rs  impl_struct.rs  into_fields.rs  make_struct.rs  multi_fields.rs  multi_nested_fields.rs  optional_fields.rs  rev_field_traits.rs  std_structural_aliases.rs  structural_alias.rs  structural_derive.rs  structural_wrapper.rs  switch.rs
structural/tests/submodules/from_structural/: macros.rs
structural/tests/submodules/into_fields/: drop_order.rs
structural_derive/: Cargo.toml
structural_derive/src/: arenas.rs  datastructure.rs  declare_name_aliases_macro.rs  field_access.rs  field_path_aliases_macro.rs  field_paths.rs  fp_impl.rs  ident_or_index.rs  ignored_wrapper.rs  impl_struct.rs  lib.rs  parse_utils.rs  str_or_ident.rs  structural_alias_impl.rs  structural_alias_impl_mod.rs  structural_derive.rs  switch_tstring_aliases.rs  ti_impl.rs  tokenizers.rs  tstring_aliases.rs  tstring_set.rs  utils.rs  write_docs.rs
structural_derive/src/structural_alias_impl/: tests.rs
structural_derive/src/structural_alias_impl_mod/: attribute_parsing.rs  parsing.rs  tests.rs
structural_derive/src/structural_derive/: attribute_config.rs  attribute_parsing.rs  delegation.rs  from_structural.rs  tests.rs
structural_derive/test_data/: field_paths.ron  structural.ron  structural_alias.ron  switch.ron
