[package]
name = "structural"
version = "0.3.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description="Field accessor traits,and emulation of structural types."
documentation = "https://docs.rs/structural/"
readme="../readme.md"
keywords = ["data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/structural_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../readme.md",
    "../APACHE_license", 
    "../MIT_license"
]

[badges]
travis-ci = { repository =  "rodrimati1992/structural_crates/" }

[features]
default = ["std"]
std=["alloc"]
# Enabling the feature in core_extension so that the impls that use 
# types or traits from the alloc crate are enabled.
# One example is the Cloned trait.
alloc=["core_extensions/alloc"]

# An internal cargo feature,used by tests
testing=["structural_derive/test_asserts","for_examples"]
# Used as a workaround for `cargo deadlinks`,
# hides the re-exports from standard library crates.
hide_reexports=[]

specialization=[]
nightly_specialization=["specialization"]

# Re-enable this feature every time you want to test whether const generics work.
use_const_str=["structural_derive/use_const_str"]
nightly_use_const_str=["use_const_str"]

disable_const_str=["structural_derive/disable_const_str"]

impl_fields=["structural_derive/impl_fields"]
nightly_impl_fields=["impl_fields"]

for_examples=[]

test_all=["all","testing"]
all=[
    "std",
    "hide_reexports",
    "for_examples",
    "nightly_specialization",
    "nightly_use_const_str",
    "nightly_impl_fields",
]


[dependencies]
structural_derive={version="=0.3.0",path="../structural_derive"}

[dependencies.core_extensions]
version="0.1.15"
default_features=false
features=["colltraits"]


[build-dependencies]
rustc_version = "0.2"
