[package]
name = "structural_derive"
version = "0.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description="Derives for manipulating struct fields."
documentation = "https://docs.rs/abi_stable/"
keywords = ["data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/abi_stable_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../APACHE_license", 
    "../MIT_license"
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.core_extensions]
default_features=false
features=["std"]
version="0.1"

[dependencies.syn]
version = "1.0"
features=["extra-traits"]
