[package]
name = "structural_derive"
version = "0.2.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/structural/"
description="Implementation detail of the structural crate."
keywords = ["data-structures"]
categories = ["data-structures","rust-patterns"]
repository = "https://github.com/rodrimati1992/structural_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../APACHE_license", 
    "../MIT_license"
]

[features]
# A private internal feature,this is required to run tests in this crate,
# because declaring a crate as both a `[dependency]` and a `[dev-dependency]` causes 
# their features to be combined,
# causing the optional crates of `as_derive_utils` that are only for testing
# to be enabled in regular builds.
testing=["as_derive_utils/testing"]

# A private internal feature that enables some assertions used in `structural` tests.
test_asserts=[]
impl_fields=[]

[badges]
travis-ci = { repository =  "rodrimati1992/structural_crates/" }

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.core_extensions]
default_features=false
features=["std"]
version="0.1"

[dependencies.syn]
version = "1.0"
features=["full","extra-traits"]



###### as_derive_utils

[dependencies.as_derive_utils]
version="0.8.1"
default-features=false